fix horizontal scroll on infinite scroll component

--- a/styles/articles.scss
+++ b/styles/articles.scss
@@ -25,3 +25,7 @@
     font-size: 22px;
   }
 }
+
+.articles-infinite-scroll-container {
+  overflow: unset !important;
+}
